# hackaton

.github/workflows/: deploy-backend.yml
backend/: .gitignore  Makefile  README_BACKEND.md  pyproject.toml  requierements.txt  requirements.txt
backend/src/adapters/handlers/: agent_chat.py  cashflow_forecast.py  create_collection_reminder.py  detect_anomalies.py  get_kpis.py  list_actions.py
backend/src/domain/usecases/: cashflow_forecast.py  create_collection_reminder.py  detect_anomalies.py  get_kpis.py
backend/src/infra/: dynamo_repo.py
backend/src/shared/: auth.py  log.py  responses.py  settings.py
backend/tests/: conftest.py  test_auth.py  test_cashflow_forecast_uc.py  test_create_collection_reminder_uc.py  test_detect_anomalies_uc.py  test_dynamo_repo.py  test_get_kpis_uc.py  test_handlers.py  test_log.py  test_responses.py  test_sanity.py  test_seed_data.py
backend/tools/: seed_data.py
frontend/: AUDIT_FRONTEND.md  README.md  README_FRONTEND.md  amplify.yml  angular.json  package-lock.json  package.json
frontend/src/: index.html  main.ts
frontend/src/app/: app.component.html  app.component.ts  app.config.ts  app.html  app.routes.ts  app.scss  app.ts
frontend/src/app/actions/: actions.html  actions.scss  actions.ts
frontend/src/app/agent/: agent.html  agent.scss  agent.ts
frontend/src/app/callback/: callback.html  callback.scss  callback.ts
frontend/src/app/core/: agent-api.service.ts  (+3 more)
frontend/src/environments/: environment.prod.ts  environment.ts
infra/: Makefile  template.yaml
infra/layers/common-deps/: requirements.txt
(+15 files in other folders)
