[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hackaton-backend"
version = "0.1.0"
description = "Backend scaffold for hackaton"
readme = "README_BACKEND.md"
authors = [{ name = "Your Team" }]
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
  "boto3>=1.34",
  "pydantic>=2.6",
  "python-jose[cryptography]>=3.3",
  "loguru>=0.7.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "pytest-cov>=4.1",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=src --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.setuptools]
packages = { find = { where = ["src"], include = ["*"], exclude = [] } }
